# extract_sync_images

./: CMakeLists.txt  README.md  package.xml
launch/: extract_all_images.launch  extract_sync_images.launch
scripts/: test.py
src/: extract_sync_images.cpp  test.cpp
